--- a/src/style/partials/_fonts.scss
+++ b/src/style/partials/_fonts.scss
@@ -22,3 +22,12 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'yantramanavblack';
+    src: url('../assets/fonts/yantramanav-black-webfont.woff2') format('woff2'),
+         url('../assets/fonts/yantramanav-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
