--- a/src/style/partials/_adjustment.scss
+++ b/src/style/partials/_adjustment.scss
@@ -22,6 +22,32 @@ html, body {
 	color: #fff;
 	@include font-size(15px);
 }
+.section__title {
+	position: absolute;
+	left: 50%;
+  top: 50%;
+  transform: translate(-35%, -50%) rotate(-90deg);
+	display: inline-block;
+	@include font-size(34px);	
+}
+.section__text {
+	@include font-size(19px);
+}
+.section__block {
+	background-color: $bgColor;
+	box-shadow: 0px 178px 152px 0px rgba(0, 0, 0, 0.45);
+	width: 660px;
+	height: 634px;
+}
+.section__numbers {
+	font-family: 'yantramanavblack', sans-serif;
+	@include font-size(286px);
+	line-height: 1;
+	opacity: .01;
+	letter-spacing: -25px;
+	user-select: none;
+	cursor: default;
+}
 h1,
 h2,
 h3,
@@ -30,6 +56,6 @@ h5,
 h6 {
 	font-weight: normal;
 	line-height: 1.42;
-	font-size: 1rem;
+	font-size: 1em;
 	margin: 0;
 }
